# pioyan-chat

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  AGENT_OUTPUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
agent_docs/: README.md  design-patterns.md  mcp-usage.md  naming-and-format.md  prompt-engineering.md  reference-map.md  tdd-template.md
backend/: pyproject.toml
backend/agent_runtime/: __init__.py  copilot_client.py  git_ops.py  main.py
backend/app/: config.py  database.py  main.py  sockets.py
backend/app/auth/: __init__.py  dependencies.py  utils.py
backend/app/bots/: __init__.py  validator.py
backend/app/models/: agent.py  agent_container.py  bot.py  channel.py  coding_task.py  message.py  user.py
backend/app/routers/: agents.py  auth.py  bots.py  channels.py  coding_channels.py  coding_tasks.py  dm.py  files.py  messages.py
backend/app/services/: __init__.py  container_service.py  github_service.py  mention_parser.py  orchestrator.py
backend/container_images/agent-base/: Dockerfile
backend/tests/: conftest.py  test_agent_runtime.py  test_agents.py  test_auth.py  test_bots.py  test_channels.py  test_coding_tasks.py  test_container_service.py  test_dm.py  test_error_resilience.py  test_files.py  test_github_service.py  test_mention_parser.py  test_messages.py  test_models.py  test_orchestrator.py  test_pipeline_integration.py  test_validator.py
(+82 files in other folders)
